# vglite_tvg_test

./: .clang-format  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  README.md  check_env.bat  env_config.txt  vg_lite.h  vg_lite_matrix.c  vg_lite_tvg.cpp  vglite_config.h  vglite_gl_backend.h  vglite_gl_config.h
.sisyphus/plans/: android-adaptation.md  examples-restructure.md  gl-backend-adaptation.md  project-optimization.md
examples/: CMakeLists.txt  README.md  build.bat  build_android.bat
examples/android/: local.properties
examples/android/app/: proguard-rules.pro
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  main.cpp
examples/android/app/src/main/res/values/: strings.xml
examples/clear_demo/: clear_demo.cpp
examples/cmake/: DemoTemplate.cmake
examples/demos/blit_demo/: CMakeLists.txt  blit_demo.cpp
examples/demos/blit_demo/android/app/: build.gradle
examples/demos/blit_demo/android/app/src/main/cpp/: CMakeLists.txt  Dummy.java  main.cpp
examples/demos/clear_demo/: CMakeLists.txt  README.md
examples/demos/clear_demo/android/: settings.gradle
libs/thorvg-1.0.2/: build_tvg.bat
libs/thorvg-1.0.2/src/: config.h
tests/: CMakeLists.txt  README.md  UNSUPPORTED_APIS.md  build_tests.bat  build_vs.bat
tests/include/: image_compare.h  test_helpers.h  vglite_test.h
tests/src/: build_verification_test.cpp  image_compare.cpp  vg_lite_stub.cpp
tests/src/samples/: ARGB2222_test.cpp  arc_path_test.cpp  blend_lvgl_test.cpp  blend_mode_test.cpp  blend_premultiply_test.cpp  clear_test.cpp  clock_test.cpp  color_transformation_test.cpp  colorkey_test.cpp  decnano_compress_test.cpp  dither_test.cpp  double_image_test.cpp  format_24bit_test.cpp  gamma_test.cpp  gaussian_blur_test.cpp  global_alpha_test.cpp  glyphs2_test.cpp  imgIndex_endian_test.cpp  img_a4_test.cpp  img_a8_test.cpp  img_index_test.cpp  linearGradient_ext_test.cpp  linear_grad_test.cpp  lossy_test.cpp  mask_test.cpp  mirror_test.cpp  multi_draw_test.cpp  new_blend_mode_test.cpp  parking_test.cpp  pattern_fill_test.cpp  pixel_matrix_test.cpp  pixels_align_test.cpp  planar_24bit_test.cpp  premultiply_test.cpp  radial_grad_test.cpp  recolor_test.cpp  rgba8_etc2_test.cpp  rotate_test.cpp  scale_test.cpp  scissor_test.cpp  (+10 more)
tests/src/unit_test/: clear_unit_test.cpp  combination_test.cpp  draw_image_test.cpp  tessellation_test.cpp
tests/src/unit_test1/: api_test.cpp  gradient_test.cpp  matrix_test.cpp  memory_test.cpp  pattern_test.cpp
tests/thorvg/: CMakeLists.txt
tests/utils/: CMakeLists.txt  vg_lite_util.c
